--- a/apps/web/components.json
+++ b/apps/web/components.json
@@ -8,7 +8,7 @@
     "css": "src/styles/index.css",
     "baseColor": "slate",
     "cssVariables": true,
-    "prefix": "ç"
+    "prefix": ""
   },
   "aliases": {
     "components": "@/components",
