--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "type": "module",
   "devDependencies": {
     "@tsconfig/node20": "^20.1.2",
     "@types/jest": "^29.5.12",
@@ -20,18 +21,21 @@
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
-    "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.8",
     "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.7.1",
     "typescript": "*"
   },
   "dependencies": {
+    "@hocuspocus/server": "^2.11.3",
     "dotenv": "^16.4.5",
     "winston": "^3.12.0",
+    "y-protocols": "^1.0.6",
+    "yjs": "^13.6.14",
     "zod": "^3.22.4"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development ts-node-dev -r tsconfig-paths/register --watch --transpile-only src/index.ts",
+    "dev": "cross-env NODE_ENV=development tsx -r tsconfig-paths/register --watch src/index.ts",
     "build": "rm -rf dist && tsc -p tsconfig.prod.json && tsc-alias",
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "format": "prettier --write src",
