--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -6,7 +6,11 @@
   "type": "module",
   "devDependencies": {
     "@tsconfig/node20": "^20.1.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/express-ws": "^3.0.4",
     "@types/jest": "^29.5.12",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.25",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "cross-env": "^7.0.3",
@@ -27,8 +31,17 @@
     "typescript": "*"
   },
   "dependencies": {
+    "@hocuspocus/extension-logger": "^2.11.3",
     "@hocuspocus/server": "^2.11.3",
+    "add": "^2.0.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "express-promise-router": "^4.1.1",
+    "express-ws": "^5.0.2",
+    "helmet": "^7.1.0",
+    "jose": "^5.2.3",
+    "morgan": "^1.10.0",
     "winston": "^3.12.0",
     "y-protocols": "^1.0.6",
     "yjs": "^13.6.14",
