--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -1,2 +1,5 @@
 PORT=3001
 LOG_LEVEL=info
+
+# Generate a secure one with this command: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+JWT_SECRET=******
