--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,23 +11,35 @@
     "format": "prettier --write src"
   },
   "dependencies": {
+    "@hocuspocus/provider": "^2.11.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@tanstack/react-query": "^5.25.0",
+    "@tiptap/extension-collaboration": "^2.2.4",
+    "@tiptap/extension-collaboration-cursor": "^2.2.4",
     "@tiptap/extension-color": "^2.2.4",
+    "@tiptap/extension-highlight": "^2.2.4",
     "@tiptap/extension-text-style": "^2.2.4",
     "@tiptap/pm": "^2.2.4",
     "@tiptap/react": "^2.2.4",
     "@tiptap/starter-kit": "^2.2.4",
+    "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.350.0",
+    "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
+    "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "y-prosemirror": "^1.2.3",
+    "yjs": "^13.6.14"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
