--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -25,15 +25,16 @@
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.8",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.7.1",
     "typescript": "*"
   },
   "dependencies": {
+    "@hocuspocus/extension-database": "^2.11.3",
     "@hocuspocus/extension-logger": "^2.11.3",
     "@hocuspocus/server": "^2.11.3",
-    "add": "^2.0.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
@@ -42,6 +43,10 @@
     "helmet": "^7.1.0",
     "jose": "^5.2.3",
     "morgan": "^1.10.0",
+    "nanoid": "^5.0.6",
+    "pg": "^8.11.3",
+    "reflect-metadata": "^0.2.1",
+    "typeorm": "^0.3.20",
     "winston": "^3.12.0",
     "y-protocols": "^1.0.6",
     "yjs": "^13.6.14",
